LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Access_User__mdt/WCGT_Access_User__mdt.object-meta.xml
<CustomObject>
    <label>WCGT Access User</label>
    <pluralLabel>WCGT Access Users</pluralLabel>
</CustomObject>