LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Access_User__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <type>Url</type>
</CustomField>