LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Access_User__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>